force-app/main/default/objects/Children__c/Children__c.object-meta.xml
<CustomObject>
    <description>Used for ISUF Children no id information</description>
    <label>Children</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Children Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>