force-app/main/default/objects/Children__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Formula field that calculates age based on birthdate.</description>
    <formula>FLOOR( (TODAY() - Birth_Date__c) / 365.2425 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>