force-app/main/default/objects/Children__c/fields/Birth_Name__c.field-meta.xml
<CustomField>
    <fullName>Birth_Name__c</fullName>
    <label>Birth Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>