force-app/main/default/objects/Children__c/fields/Birthday_Day__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Day__c</fullName>
    <formula>DAY( Birth_Date__c )</formula>
    <label>Birthday Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>