force-app/main/default/objects/Children__c/fields/Birthday_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Month__c</fullName>
    <formula>MONTH ( Birth_Date__c )</formula>
    <label>Birthday Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>