force-app/main/default/objects/Children__c/fields/Birthday_Year__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Year__c</fullName>
    <formula>TEXT( YEAR( Birth_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Year</label>
    <type>Text</type>
</CustomField>