force-app/main/default/objects/Children__c/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asian/Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Black/African American</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Native American</fullName>
            </value>
            <value>
                <fullName>Multi-racial</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>