force-app/main/default/objects/Children__c/fields/Expected_College_Entrance__c.field-meta.xml
<CustomField>
    <fullName>Expected_College_Entrance__c</fullName>
    <label>Expected College Entrance</label>
    <type>Date</type>
</CustomField>