force-app/main/default/objects/Children__c/fields/Expected_College_Entry__c.field-meta.xml
<CustomField>
    <fullName>Expected_College_Entry__c</fullName>
    <formula>IF( Birthday_Month__c &lt;= 7,
DATE( YEAR( Birth_Date__c ) + 18 ,9,1), DATE( YEAR( Birth_Date__c ) + 19 ,9,1))</formula>
    <label>Expected College Entry</label>
    <type>Date</type>
</CustomField>