force-app/main/default/objects/Children__c/fields/ISU_Entry_Semester__c.field-meta.xml
<CustomField>
    <fullName>ISU_Entry_Semester__c</fullName>
    <label>ISU Entry Semester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>