force-app/main/default/objects/Children__c/fields/Legacy_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact__c</fullName>
    <label>Legacy Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gift to new baby</fullName>
            </value>
            <value>
                <fullName>Gift to 5 year olds</fullName>
            </value>
            <value>
                <fullName>Gift to 10 year olds</fullName>
            </value>
            <value>
                <fullName>Legacy Migration</fullName>
            </value>
            <value>
                <fullName>President&apos;s Invitation to Apply</fullName>
            </value>
            <value>
                <fullName>Returned baby gift</fullName>
            </value>
            <value>
                <fullName>Returned 5 year old gift</fullName>
            </value>
            <value>
                <fullName>Returned 10 year old gift</fullName>
            </value>
            <value>
                <fullName>Gift to 16 year olds</fullName>
            </value>
            <value>
                <fullName>Invalid child first name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>