force-app/main/default/objects/Children__c/fields/LegaCY_Error__c.field-meta.xml
<CustomField>
    <fullName>LegaCY_Error__c</fullName>
    <formula>IF(  AND( LegaCY_Member_Formula__c = TRUE, OR( ISBLANK( First_Name__c ), ISBLANK( Last_Name__c ), Deceased__c = TRUE, ISNULL( Birth_Date__c ),  Age__c &gt; 18)), TRUE, FALSE)</formula>
    <label>LegaCY Error</label>
    <type>Checkbox</type>
</CustomField>