force-app/main/default/objects/Children__c/fields/LegaCY_Member_Formula__c.field-meta.xml
<CustomField>
    <fullName>LegaCY_Member_Formula__c</fullName>
    <formula>IF( AND( NOT( ISBLANK(  LegaCY_Sponsor__c )), LegaCY_Sponsor__r.Latest_ISUAA_Membership__r.ISUAA_Membership_Status__c  = &apos;Active&apos;, Deceased__c = FALSE, Age__c &lt; 19), TRUE, FALSE)</formula>
    <label>LegaCY Member</label>
    <type>Checkbox</type>
</CustomField>