force-app/main/default/objects/Children__c/fields/LegaCY_Membership_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>LegaCY_Membership_Begin_Date__c</fullName>
    <inlineHelpText>Date the LegaCY Membership Began</inlineHelpText>
    <label>LegaCY Membership Begin Date</label>
    <type>Date</type>
</CustomField>