force-app/main/default/objects/Children__c/fields/LegaCY_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>LegaCY_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to Constituent</description>
    <inlineHelpText>Constituent</inlineHelpText>
    <label>LegaCY Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Children (LegaCY Sponsor)</relationshipLabel>
    <relationshipName>Children1</relationshipName>
    <type>Lookup</type>
</CustomField>