force-app/main/default/objects/Children__c/fields/Married_Name__c.field-meta.xml
<CustomField>
    <fullName>Married_Name__c</fullName>
    <label>Married Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>