force-app/main/default/objects/Children__c/fields/Resides_with_Parent__c.field-meta.xml
<CustomField>
    <fullName>Resides_with_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resides with Parent</label>
    <type>Checkbox</type>
</CustomField>