force-app/main/default/objects/Children__c/fields/Sponsor_Type__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Type__c</fullName>
    <label>Sponsor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aunt-Uncle Sponsor</fullName>
            </value>
            <value>
                <fullName>Grandparent Sponsor</fullName>
            </value>
            <value>
                <fullName>Parent Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>