force-app/main/default/objects/Children__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>James</fullName>
            </value>
            <value>
                <fullName>Corey</fullName>
            </value>
            <value>
                <fullName>CFP</fullName>
            </value>
            <value>
                <fullName>CCP</fullName>
            </value>
            <value>
                <fullName>SLP</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>Scott</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>Ret.</fullName>
            </value>
            <value>
                <fullName>Jr., PhD</fullName>
            </value>
            <value>
                <fullName>Nancy</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>M.D.</fullName>
            </value>
            <value>
                <fullName>Jr</fullName>
            </value>
            <value>
                <fullName>PE, CFM</fullName>
            </value>
            <value>
                <fullName>P.E.</fullName>
            </value>
            <value>
                <fullName>Tyson</fullName>
            </value>
            <value>
                <fullName>Esq.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>