force-app/main/default/objects/Children__c/fields/X0_1_Cy_s_Surprise__c.field-meta.xml
<CustomField>
    <fullName>X0_1_Cy_s_Surprise__c</fullName>
    <label>0-1: Cy&apos;s Surprise</label>
    <type>Date</type>
</CustomField>