force-app/main/default/objects/Children__c/fields/X13_15_Pillowcase__c.field-meta.xml
<CustomField>
    <fullName>X13_15_Pillowcase__c</fullName>
    <label>13-15: Pillowcase</label>
    <type>Date</type>
</CustomField>