force-app/main/default/objects/Children__c/fields/X15_17_Decal_Keyfob__c.field-meta.xml
<CustomField>
    <fullName>X15_17_Decal_Keyfob__c</fullName>
    <label>15-17: Decal/Keyfob</label>
    <type>Date</type>
</CustomField>