force-app/main/default/objects/Children__c/fields/X2_4_Growth_Chart__c.field-meta.xml
<CustomField>
    <fullName>X2_4_Growth_Chart__c</fullName>
    <label>2-4: Growth Chart</label>
    <type>Date</type>
</CustomField>