force-app/main/default/objects/Children__c/fields/X5_6_Backpack__c.field-meta.xml
<CustomField>
    <fullName>X5_6_Backpack__c</fullName>
    <label>5-6: Backpack</label>
    <type>Date</type>
</CustomField>