force-app/main/default/objects/Children__c/fields/X7_9_Cy_piggy_bank__c.field-meta.xml
<CustomField>
    <fullName>X7_9_Cy_piggy_bank__c</fullName>
    <label>7-9: Cy piggy bank</label>
    <type>Date</type>
</CustomField>