force-app/main/default/objects/Children__c/listViews/Legacy_bdays_this_month.listView-meta.xml
<ListView>
    <fullName>Legacy_bdays_this_month</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Age__c</columns>
    <columns>LegaCY_Sponsor__c</columns>
    <columns>X0_1_Cy_s_Surprise__c</columns>
    <columns>X2_4_Growth_Chart__c</columns>
    <columns>X5_6_Backpack__c</columns>
    <columns>X7_9_Cy_piggy_bank__c</columns>
    <columns>X10_12_Notebook__c</columns>
    <columns>X13_15_Pillowcase__c</columns>
    <columns>X15_17_Decal_Keyfob__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Birthday_Month__c</field>
        <operation>equals</operation>
        <value>10</value>
    </filters>
    <filters>
        <field>LegaCY_Member_Formula__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Birthday_Day__c</field>
        <operation>greaterOrEqual</operation>
        <value>16</value>
    </filters>
    <filters>
        <field>Birthday_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>Legacy Birthdays By Month</label>
</ListView>